--- a/src/components/home/hero/Hero.css
+++ b/src/components/home/hero/Hero.css
@@ -1,6 +1,7 @@
 .hero {
-  background-color: #81c7c2;
-  background-size: contain;
+  background-image: url(../../../../public/images/Background.png);
+  background-size: 50%;
+  opacity: 0.4;
   background-attachment: fixed;
   position: absolute;
   top: 0;
