--- a/src/App.css
+++ b/src/App.css
@@ -100,3 +100,31 @@ p{
   line-height: 30px;
   font-size: 18px;
 }
+.back {
+  background-image: url(../public/images/bgd.png);
+  background-size: 50%;
+  /* opacity: 0.4; */
+  background-attachment: fixed;
+  position: absolute;
+  top: 0;
+  left: 0;
+  z-index: -1;
+  width: 100%;
+  height: 100vh;
+  padding-top: 30%;
+  padding-right: 50px;
+  color: #1eb2a6;
+  text-align: center;
+}
+.back h1{
+  font-size: 100px;
+  font-weight: 400;
+}
+.back h2{
+  font-weight: 1000;
+  font-size: 17px;
+  text-transform: uppercase;
+}
+.margin{
+  margin-top: 33.3%;
+}
