--- a/src/components/common/heading/Header.css
+++ b/src/components/common/heading/Header.css
@@ -1,11 +1,12 @@
 .head{
     padding: 20px 0;
-    color: #fff;
+    color: #1eb2a6;
 }
 
 .logo h1{
     font-size: 35px;
     font-weight: 900;
+    color: #1eb2a6;
 }
 .head .icon{
     margin-left: 10px;
@@ -13,13 +14,14 @@
 /* ---------------------------Header----------------------- */
 
 header {
-    background-color: rgba(255, 255, 255, 0.2);
+    background-color: rgba(255, 255, 255, 0.541);
     margin: 0 30px;
     position: relative;
   }
   
 header ul {
 padding: 30px 20px;
+
 }
 
 header li {
@@ -27,14 +29,15 @@ margin-right: 40px;
 }
 
 header ul li a {
-color: #fff;
+color: #1eb2a6;
 font-weight: 1000;
 font-size: 20px;
 transition: 0.5s;
+
 }
 
 header ul li a:hover {
-color: #1eb2a6;
+color: black;
 }
 .toggle{
     display: none;
