--- a/src/components/home/hero/Hero.css
+++ b/src/components/home/hero/Hero.css
@@ -1,7 +1,7 @@
 .hero {
-  background-image: url(../../../../public/images/Background.png);
+  background-image: url(../../../../public/images/bgd.png);
   background-size: 50%;
-  opacity: 0.4;
+  /* opacity: 0.4; */
   background-attachment: fixed;
   position: absolute;
   top: 0;
