--- a/src/components/home/hero/Hero.css
+++ b/src/components/home/hero/Hero.css
@@ -9,13 +9,20 @@
   z-index: -1;
   width: 100%;
   height: 100vh;
-  padding-top: 20%;
+  padding-top: 16%;
   padding-right: 50px;
   color: #fff;
-  ;
 }
 .hero #heading h3 {
-  color: #fff;
+  color: #1eb2a6;
+  font-weight: 1000;
+}
+.hero #heading h1 {
+  color: #5a5c5c;
+  /* font-weight: 1000; */
+}
+.hero p{
+  color: #5a5c5c;
   font-weight: 1000;
 }
 .hero #heading {
@@ -29,7 +36,7 @@
     }
     .hero{
         background-position: right;
-        padding-top: 50%;
+        padding-top: 55%;
         height: 80vh;
     }
     .hero .row {
