--- a/src/components/common/heading/Header.css
+++ b/src/components/common/heading/Header.css
@@ -1,12 +1,12 @@
 .head {
   padding: 20px 0;
-  color: #1eb2a6;
+  color: #219ebc;
 }
 
 .logo h1 {
   font-size: 35px;
   font-weight: 900;
-  color: #1eb2a6;
+  color: #219ebc;
 }
 .head .icon {
   margin-left: 10px;
@@ -28,7 +28,7 @@ header li {
 }
 
 header ul li a {
-  color: #1eb2a6;
+  color: #219ebc;
   font-weight: 1000;
   font-size: 20px;
   transition: 0.5s;
@@ -54,7 +54,7 @@ header ul li a:hover {
     margin-bottom: 20px;
   }
   header ul li a {
-    color: #1eb2a6;
+    color: #219ebc;
     font-weight: 1000;
     font-size: 20px;
     transition: 0.5s;
