--- a/src/components/home/hero/Hero.css
+++ b/src/components/home/hero/Hero.css
@@ -8,20 +8,20 @@
   left: 0;
   z-index: -1;
   width: 100%;
-  height: 100vh;
+  height: 90vh;
   padding-top: 16%;
   padding-right: 50px;
   color: #fff;
 }
 .hero #heading h3 {
-  color: #1eb2a6;
+  color: #219ebc;
   font-weight: 1000;
 }
 .hero #heading h1 {
   color: #5a5c5c;
   /* font-weight: 1000; */
 }
-.hero p{
+.hero p {
   color: #5a5c5c;
   font-weight: 1000;
 }
@@ -31,15 +31,15 @@
   padding: 0;
 }
 @media screen and (max-width: 768px) {
-    .margin{
-        height: 40vh;
-    }
-    .hero{
-        background-position: right;
-        padding-top: 55%;
-        height: 80vh;
-    }
-    .hero .row {
-        width: 100%;
-    }
+  .margin {
+    height: 40vh;
+  }
+  .hero {
+    background-position: right;
+    padding-top: 55%;
+    height: 80vh;
+  }
+  .hero .row {
+    width: 100%;
+  }
 }
